# uv-bug-repro

./: README.md  pyproject.toml  repro-output.txt
src/uv_bug_repro/: __init__.py
